--- a/src/locale/ja/LC_MESSAGES/onsenui.po
+++ b/src/locale/ja/LC_MESSAGES/onsenui.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Monaca Docs\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2016-06-29 03:02+0000\n"
+"PO-Revision-Date: 2016-08-08 02:54+0000\n"
 "Last-Translator: Masakazu Watabe <watabe08@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/monaca/monaca-docs/language/ja/)\n"
 "MIME-Version: 1.0\n"
@@ -32,13 +32,13 @@ msgid ""
 "flexible and gives hybrid apps a native look and feel on all platforms. And "
 "when used with Monaca, it is simple to add backend features and device "
 "support, resulting in a publishable app."
-msgstr "**Onsen UI** はフロントエンド開発用のツールです。**Onsen UI** が提供する UI を使用すれば、PhoneGap/Cordova アプリを飛躍的に改善できます。他のフレームワークよりも洗練された柔軟性を持ち、ハイブリッドアプリにおいても、ネイティブ並みの外観と操作性を、すべてのプラットフォーム上で実現できます。Monaca と共に使用すれば、バックエンド機能の追加と各種端末のサポートを容易に行え、配布可能なアプリを簡単に作成できます。"
+msgstr "**Onsen UI** はフロントエンド開発用のツールです。**Onsen UI** が提供する UI を使用すれば、PhoneGap/Cordova アプリの外観と操作性を飛躍的に改善できます。他のフレームワークよりも洗練された柔軟性を持ち、ハイブリッドアプリにおいても、ネイティブ並みの外観と操作性を、すべてのプラットフォーム上で実現できます。Monaca と共に使用すれば、バックエンド機能の追加と各種端末のサポートを容易に行え、配布可能なアプリを簡単に作成できます。"
 
 #: ../doc/onsenui/index.rst:22
 msgid ""
 "For more information on **Onsen UI**, please go to `Onsen UI home page "
 "<http://onsenui.io>`_."
-msgstr "**Onsen UI** の詳細に関しては `Onsen UI ホームページ <http://ja.onsenui.io>`_ をご確認ください。"
+msgstr "**Onsen UI** の詳細に関しては `Onsen UI ホームページ <https://ja.onsen.io>`_ をご確認ください。"
 
 #: ../doc/onsenui/index.rst:25
 msgid "Starting a new Onsen UI project in Monaca"
@@ -73,4 +73,4 @@ msgid ""
 "Now you have Onsen UI installed. See examples in `Onsen UI Docs "
 "<http://onsenui.io/guide/overview.html>`_  for how to use Onsen UI "
 "components."
-msgstr "ここまでの手順で、Onsen UI のインストールが完了しました。Onsen UI コンポーネントの使用方法とサンプルに関しては `Onsen UI ドキュメント <http://ja.onsenui.io/guide/overview.html>`_  をご確認ください。"
+msgstr "ここまでの手順で、Onsen UI のインストールが完了しました。Onsen UI コンポーネントの使用方法とサンプルに関しては `Onsen UI ドキュメント <https://ja.onsen.io/v1/guide.html>`_  をご確認ください。"
