--- a/src/locale/ja/LC_MESSAGES/reference.po
+++ b/src/locale/ja/LC_MESSAGES/reference.po
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Monaca Docs\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2016-09-12 05:38+0000\n"
-"Last-Translator: Masahiro Tanaka <masahiro@asial.co.jp>\n"
+"PO-Revision-Date: 2016-09-12 05:46+0000\n"
+"Last-Translator: Masakazu Watabe <watabe08@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/monaca/monaca-docs/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -26108,7 +26108,7 @@ msgstr "BarcodeScanner プラグインのデモ"
 
 #: ../doc/reference/third_party_phonegap/custom_config.rst:5
 msgid "Cordova Custom Config Plugin"
-msgstr ""
+msgstr "Custom Config プラグイン"
 
 #: ../doc/reference/third_party_phonegap/custom_config.rst:7
 msgid ""
@@ -26117,7 +26117,7 @@ msgid ""
 "Info.plist`` file respectively. However, for Cordova 6.2 or higher, both "
 ":file:`AndroidManifest.xml` and ``MonacaApp-Info.plist`` files are removed "
 "from Monaca framework."
-msgstr ""
+msgstr "Cordova 5.2 以前のバージョンをサポートする Monaca フレームワークでは、:file:`AndroidManifest.xml` ( Android の場合 ) または ``MonacaApp-Info.plist`` ( iOS の場合 ) を編集すれば、アプリのデフォルトの挙動を制御することができました。Cordova 6.2 以降のバージョンをサポートする Monaca フレームワークでは、仕様が変更され、:file:`AndroidManifest.xml` と ``MonacaApp-Info.plist`` のいずれのファイルも使用しなくなりました。"
 
 #: ../doc/reference/third_party_phonegap/custom_config.rst:9
 msgid ""
