[update] remove ibmobi from faq

--- a/src/locale/ja/LC_MESSAGES/manual.po
+++ b/src/locale/ja/LC_MESSAGES/manual.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Monaca Docs\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2016-09-13 10:59+0000\n"
+"PO-Revision-Date: 2016-09-13 11:31+0000\n"
 "Last-Translator: fabbygoh <fabbygoh@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/monaca/monaca-docs/language/ja/)\n"
 "MIME-Version: 1.0\n"
@@ -10811,7 +10811,7 @@ msgstr ""
 
 #: ../doc/manual/monaca_ci/overview.rst:53
 msgid ""
-"By default, Monaca CI is disable. To enable it, click :guilabel:`Enable` and"
+"Monaca CI is disabled by default. To enable it, click :guilabel:`Enable` and"
 " then :guilabel:`Save` it. That's it! Now your Monaca CI is ready. You can "
 "start pushing your project code to the valid branch or tag as configured in "
 "JSON settings. Then, you should be able to find the built files under Build "
@@ -10856,7 +10856,7 @@ msgid ""
 "generate debug build of your project for both iOS and Android platforms when"
 " you push the project code to the Github's branch called ``\"release\"``. "
 "Then, distribute the built files to ``Deploy Gate`` service which has a "
-"release note and disable the email notfication for iOS devices. Therefore, "
+"release note and disable the email notification for iOS devices. Therefore, "
 "your JSON script should look like this:"
 msgstr ""
 
