--- a/src/locale/manual.pot
+++ b/src/locale/manual.pot
@@ -7954,19 +7954,19 @@ msgid "Monaca Localkit can accelerate your app development process because it pr
 msgstr ""
 
 #: ../doc/manual/development/monaca_localkit/overview.rst:15
-msgid "create and import Cordova project: You can create a new project based on templates provided by Monaca. Moreover, you can import either Monaca project from Monaca Cloud IDE or existing Cordova project."
+msgid "Create and import Cordova project. You can create a new project based on templates provided by Monaca. Moreover, you can import either a Monaca project from Monaca Cloud IDE or an existing Cordova project."
 msgstr ""
 
 #: ../doc/manual/development/monaca_localkit/overview.rst:17
-msgid "live reload of project: By pairing with Monaca Debugger, you can run your project instantly on your device. All changes made to the source code of the project will be updated immediately after those changes are saved."
+msgid "Live reload of the project. By pairing with Monaca Debugger, you can run your project instantly on your device. All changes made to the source code of the project will be updated immediately after those changes are saved."
 msgstr ""
 
 #: ../doc/manual/development/monaca_localkit/overview.rst:19
-msgid "integrate with Chrome DevTools: By connecting your device (running Monaca Debugger) to the host PC (running Monaca Localkit) via USB cable, you can debug your app using Chrome DevTools. With the DevTools, you can set breakpoint and perform JavaScript debugging and app inspection."
+msgid "Integrate with Chrome DevTools. By connecting your device (running Monaca Debugger) to the host PC (running Monaca Localkit) via USB cable, you can debug your app using Chrome DevTools. With Chrome DevTools, you can set breakpoints, and implement JavaScript debugging and app inspection."
 msgstr ""
 
 #: ../doc/manual/development/monaca_localkit/overview.rst:21
-msgid "remote build: Monaca Localkit allows you to build your app for various platforms with the support from Monaca server."
+msgid "Remote build. Monaca Localkit allows you to build your app for various platforms with support from Monaca server."
 msgstr ""
 
 #: ../doc/manual/development/monaca_localkit/overview.rst:24
