--- a/src/locale/manual.pot
+++ b/src/locale/manual.pot
@@ -7978,7 +7978,7 @@ msgid "You are required to have a valid plan in order to use Monaca Localkit. Ot
 msgstr ""
 
 #: ../doc/manual/development/monaca_localkit/overview.rst:29
-msgid "Please note that :ref:`Backend <monaca_backend_index>` as well as :ref:`push_notification_index` are currently not available in Monaca Localkit yet."
+msgid "Please note that :ref:`Monaca Backend <monaca_backend_index>` as well as :ref:`push_notification_index` are currently not available in Monaca Localkit yet."
 msgstr ""
 
 #: ../doc/manual/development/monaca_localkit/overview.rst:32
