[add] new layout

--- a/src/locale/ja/LC_MESSAGES/reference.po
+++ b/src/locale/ja/LC_MESSAGES/reference.po
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Monaca Docs\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2016-09-15 05:55+0000\n"
-"Last-Translator: Masakazu Watabe <watabe08@gmail.com>\n"
+"PO-Revision-Date: 2016-09-15 09:48+0000\n"
+"Last-Translator: fabbygoh <fabbygoh@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/monaca/monaca-docs/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25526,7 +25526,7 @@ msgid "\"2.8 Apps that install or launch other executable code will be rejected\
 msgstr "「 2.8 Apps that install or launch other executable code will be rejected 」 ( 外部のコードをインストール・起動するアプリは、却下されます。 )"
 
 #: ../doc/reference/power_plugins/index.rst:5
-msgid "Monaca Power Plugins"
+msgid "Power Plugins"
 msgstr ""
 
 #: ../doc/reference/power_plugins/index.rst:7
