--- a/src/locale/reference.pot
+++ b/src/locale/reference.pot
@@ -21958,7 +21958,7 @@ msgid "\"2.8 Apps that install or launch other executable code will be rejected\
 msgstr ""
 
 #: ../doc/reference/power_plugins/index.rst:5
-msgid "Monaca Power Plugins"
+msgid "Power Plugins"
 msgstr ""
 
 #: ../doc/reference/power_plugins/index.rst:7
